--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  id: 1
+  featured: 1
   title: MyString
   description: MyText
   image_url: MyString
@@ -11,7 +11,7 @@ one:
   amount_store: 1
 
 two:
-  id: 2
+  featured: 0
   title: MyString
   description: MyText
   image_url: MyString
@@ -21,7 +21,7 @@ two:
   amount_store: 1
 
 pretty_pony:
-  id: 3
+  featured: 1
   title: Pretty Pony
   description: this pony is soooo pretty
   image_url: pretty.jpg
